--- a/paguina.css
+++ b/paguina.css
@@ -89,7 +89,7 @@ header a:hover{
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     )
-    ,url("hero.jpg");
+    ,url("./hero.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -141,7 +141,7 @@ header a:hover{
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     )
-    ,url("front-end.jpg");
+    ,url("./front-end.jpg");
 
 }
 
@@ -151,7 +151,7 @@ header a:hover{
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     )
-    ,url("full-stack.jpg");
+    ,url("./full-stack.jpg");
 }
 
 .carta:nth-child(3){
@@ -160,7 +160,7 @@ header a:hover{
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     )
-    ,url("python.jpg");
+    ,url("./python.jpg");
 
 }
 
@@ -251,7 +251,7 @@ footer .container{
     }
 
     #somos-proya .img-container{
-        background-image: url("somos-proya.jpg");
+        background-image: url("./somos-proya.jpg");
         background-size: cover;
         background-position: center center;
         height: 500px;
@@ -291,7 +291,7 @@ footer .container{
             rgba(0,0,0,0.5),
             rgba(0,0,0,0.5)
         )
-        ,url("front-end-cropped.jpg");
+        ,url("./front-end-cropped.jpg");
 
     }
 
@@ -301,7 +301,7 @@ footer .container{
             rgba(0,0,0,0.5),
             rgba(0,0,0,0.5)
         )
-        ,url("full-stack-cropped.jpg");
+        ,url("./full-stack-cropped.jpg");
     }
 
     .carta:nth-child(3){
@@ -310,12 +310,12 @@ footer .container{
             rgba(0,0,0,0.5),
             rgba(0,0,0,0.5)
         )
-        ,url("python-cropped.jpg");
+        ,url("./python-cropped.jpg");
 
     }
 
     #caracteristicas{
-        background-image: url("imagen-programador.jpg");
+        background-image: url("./imagen-programador.jpg");
         background-repeat: no-repeat;
         background-size: 500px 400px;
         background-position: calc(100vw - 500px) 120px;
